--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ packaging==25.0
 passlib==1.7.4
 pluggy==1.5.0
 psycopg==3.2.7
+psycopg2-binary==2.9.10
 pydantic==2.11.4
 pydantic-extra-types==2.10.4
 pydantic-settings==2.9.1
